fix: fix layout bug with sticky header disappearing on tablets

--- a/src/assets/scss/base/base.scss
+++ b/src/assets/scss/base/base.scss
@@ -23,14 +23,11 @@ button {
   outline: auto;
 }
 
-#root {
-  height: 100%;
-}
-
 .wrapper {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  min-height: 100vh;
+  min-height: 100svh;
 }
 
 .main {
